# investments-modeling

./: .gitignore  CMakeLists  CMakeLists.txt  README.md  Requirements.txt  portfolio_report.tex
app/: BondInvestment.cpp  BondInvestment.h  CurrencyInvestment.cpp  CurrencyInvestment.h  DepositInvestment.cpp  DepositInvestment.h  GameController.cpp  GameController.h  Investment.cpp  Investment.h  InvestmentFund.cpp  InvestmentFund.h  MainWindow.cpp  MainWindow.h  Market.cpp  Market.h  MetalInvestment.cpp  MetalInvestment.h  Portfolio.cpp  Portfolio.h  StockInvestment.cpp  StockInvestment.h  SummaryDialog.cpp  SummaryDialog.h  Utils.cpp  Utils.h  main.cpp
src/: CMakeLists.txt  Fund.h  Investment.h  InvestmentItem.h  Market.cpp  Market.h  Portfolio.h  RandomEngine.h  Simulator.h  Utils.h  main.cpp
src/investments/: Deposit.h  Stock.h
src/src/: Market.h
